--- a/public/index.html
+++ b/public/index.html
@@ -39,8 +39,8 @@
     href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900"
     rel="stylesheet"
   />
-  <title>Mais</title>
-  <link rel="icon" href="img/icon/logo_mais.png">
+  <title>FerbTech</title>
+  <link rel="icon" href="img/icon/logo_ferb.png">
   <meta name="description" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
